update wrapperless-command